# ExpensesTracker

./: README.md  SECURITY.md  list_gemini_models.py  test_gemini_connection.py
client/: README.md  package-lock.json  package.json
client/src/: App.jsx  config.jsx  index.css
client/src/components/: ProtectedRoute.jsx
client/src/context/: AuthContext.jsx  DashboardContext.jsx  ThemeContext.jsx
client/src/pages/: Dashboard.css  Dashboard.jsx  DetailView.css  DetailView.jsx  Hero.css  Hero.jsx  Profile.css  Profile.jsx  Transactions.css  Transactions.jsx
client/src/services/: api.js  authService.js  dashboardService.js  transactionService.js  userService.js
server/: .env  .gitignore  README.md  app.py  debug_db.py  debug_log.txt  latest_error.txt  migrate_transactions.py  pyproject.toml  requirements.txt  temp_log.txt  temp_log_new.txt  trash.txt
server/database/: database.py
server/database/queries/: transaction_queries.py  user_queries.py
server/models/: budget_model.py  model.py  payloads.py  response_model.py  transaction_model.py  user_model.py  widget_model.py
server/routes/: auth_routes.py  cache_routes.py  chat_routes.py  dashboard_routes.py  routes.py  transaction_routes.py  upload_routes.py  user_routes.py
server/scripts/: create_indexes.py  verify_api.py
server/services/: ai_service.py  auth_service.py  cache_service.py  chat_service.py  dashboard_service.py  transaction_service.py  user_service.py
server/tests/: test_pdf.py
server/utils/: aggregation_pipelines.py  auth.py  cache.py  date_helpers.py  logger.py
(+33 files in other folders)
